--- a/src/main/resources/templates/certification/edit-certification.html
+++ b/src/main/resources/templates/certification/edit-certification.html
@@ -39,12 +39,13 @@
                             <a class="dropdown-item" th:href="@{/pets-care/members/{sitterId}/care-available-dates?page=0&size=9(sitterId=${session.member.id})}">
                                 등록한 돌봄 가능 일정
                             </a>
-                            <a class="dropdown-item" th:href="@{/pets-care/members/${sitterId}/schedules(sitterId=${session.member.id})}">
+                            <a class="dropdown-item" th:href="@{/pets-care/members/{sitterId}/schedules?page=0&size=10(sitterId=${session.member.id})}">
                                 나의 돌봄 일정
                             </a>
                         </div>
+
                         <a class="dropdown-item" th:if="${session.member.role.name() == 'CUSTOMER'}"
-                           th:href="@{/pets-care/members/{customerId}/reservations(customerId=${session.member.id})}">
+                           th:href="@{/pets-care/members/{customerId}/reservations?page=0&size=10(customerId=${session.member.id})}">
                             나의 예약 현황
                         </a>
                         <div th:if="${session.member.role.name() == 'ADMIN'}">
