--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -3,8 +3,8 @@
 <head>
     <title>회원 정보</title>
     <!-- Bootstrap CSS -->
-    <link th:href="@{/css/mainStyle.css}" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link th:href="@{/css/mainStyle.css}" rel="stylesheet">
     <link th:href="@{/css/profileStyle.css}" rel="stylesheet">
 </head>
 <body>
@@ -183,14 +183,14 @@
         <div class="card-body">
             <h4 class="card-title">
                 <span th:if="${member.role.name() == 'CUSTOMER'}">✍ 내가 작성한 돌봄 리뷰</span>
-                <span th:if="${member.role.name() == 'PET_SITTER'}">📢 내가 받은 돌봄 리뷰</span>
+                <span th:if="${member.role.name() == 'PET_SITTER'}">📢 내가 받은 돌봄 리뷰와 작성한 케어 로그</span>
             </h4>
             <p class="card-text">
                 <span th:if="${member.role.name() == 'CUSTOMER'}">
                     고객으로서 작성한 돌봄 서비스 리뷰를 확인할 수 있습니다.
                 </span>
                 <span th:if="${member.role.name() == 'PET_SITTER'}">
-                    펫시터로서 받은 리뷰를 확인할 수 있습니다.
+                    펫시터로서 받은 리뷰와 작성한 돌봄 케어 로그를 확인할 수 있습니다.
                 </span>
             </p>
             <a th:if="${member.role.name() == 'CUSTOMER'}"
@@ -202,6 +202,11 @@
                class="btn btn-outline-primary"
                th:href="@{/pets-care/members/{sitterId}/reviews?page=0&size=10(sitterId=${session.member.id})}">
                 받은 리뷰 보기
+            </a>
+            <a th:if="${member.role.name() == 'PET_SITTER'}"
+               class="btn btn-outline-primary"
+               th:href="@{/pets-care/members/{sitterId}/care-logs?page=0&size=10(sitterId=${session.member.id})}">
+                작성한 돌봄 케어 로그 보기
             </a>
         </div>
     </div>
